--- a/copperpvd.tex
+++ b/copperpvd.tex
@@ -9,7 +9,7 @@
     \hline
     \textbf{Bezeichnung} & \textbf{Anwendung \& Kommentare} & \textbf{Ref.} \\
     \hline
-    CuAg.eam.alloy & Strukturelle und thermische Eigenschaften von \ce{Cu-Ag} & \cite{williams_embedded-atom_2006} \\
+    CuAg.eam.alloy & Strukturelle und thermodynamische Eigenschaften von \ce{Cu-Ag} & \cite{williams_embedded-atom_2006} \\
     cu\_ag\_ymwu.eam.alloy & Mono-, Di-, Trimere und Inseln von \ce{Cu} auf \ce{Ag} & \cite{wu_cu/ag_2009} \\
     Cu\_smf7.eam & Oberflächen von \ce{Ni-Cu}-Legierungen bei \SI{800}{\kelvin} & \cite{foiles_calculation_1985} \\
     Cu\_u3.eam & Oberflächen und Bulks verschiedener Legierungen & \cite{foiles_embedded-atom-method_1986} \\
