--- a/literature.bib
+++ b/literature.bib
@@ -344,3 +344,40 @@
 	month = sep,
 	year = {2014}
 }
+
+@article{svorcik_annealing_2011,
+	title = {Annealing of sputtered gold nano-structures},
+	volume = {102},
+	issn = {0947-8396, 1432-0630},
+	url = {http://link.springer.com/article/10.1007/s00339-010-5977-5},
+	doi = {10.1007/s00339-010-5977-5},
+	abstract = {Abstract The effects of annealing on gold structures sputtered onto glass substrate were studied using {AFM}, {UV}-Vis methods and electrical measurements. The colour of the as-deposited films changes from blue to green with increasing deposition time. After 1 hour annealing at 300°C the structures acquire red colour regardless of the film thickness. The annealing results in dramatic changes of surface morphology and roughness and creation of relatively large “spherolytic and hummock-like” structures in the gold layer. For deposited structures a non-zero optical band gap {EoptgE}\_\{{\textbackslash}mathrm\{g\}\}{\textasciicircum}\{{\textbackslash}mathrm\{opt\}\} was determined from {UV}-Vis spectra using Tauc’s model and it indicates a semi-conducting character of the structures. The annealing leads to an increase of the band gap. Electrical resistance of the deposited unannealed structures decreases dramatically for deposition times above 50 s. For annealed structures the resistance fall comes until after 250 s deposition time.},
+	language = {en},
+	number = {3},
+	urldate = {2014-10-21},
+	journal = {Applied Physics A},
+	author = {Švorčík, V. and Kvítek, O. and Lyutakov, O. and Siegel, J. and Kolská, Z.},
+	month = mar,
+	year = {2011},
+	keywords = {Characterization and Evaluation of Materials, Condensed Matter Physics, Nanotechnology, Operating Procedures, Materials Treatment, Optical and Electronic Materials, Surfaces and Interfaces, Thin Films},
+	pages = {747--751},
+	file = {Full Text PDF:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/5A3PJC4P/Švorčík et al. - 2011 - Annealing of sputtered gold nano-structures.pdf:application/pdf;Snapshot:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/37T96ZKN/s00339-010-5977-5.html:text/html}
+}
+
+@article{liu_melting_2001,
+	title = {Melting behavior of nanometer sized gold isomers},
+	volume = {491},
+	issn = {0039-6028},
+	url = {http://www.sciencedirect.com/science/article/pii/S0039602801013516},
+	doi = {10.1016/S0039-6028(01)01351-6},
+	abstract = {In the present work, the melting behavior of nanometer sized gold isomers was studied using a tight-binding potential with a second momentum approximation. The cases of cuboctahedra, icosahedra, Bagley decahedra, Marks decahedra and star-like decahedra were considered. We calculated the temperature dependence of the total energy and volume during melting and the melting point for different types and sizes of clusters. In addition, the structural evolutions of the nanosized clusters during the melting transition were monitored and revealed. It is found that the melting process has three characteristic time periods for the intermediate nanosized clusters. The whole process includes surface disordering and reordering, followed by surface melting and a final rapid overall melting. This is a new observation, which it is in contrast with previous reports where surface melting is the dominant step.},
+	number = {1–2},
+	urldate = {2014-10-21},
+	journal = {Surface Science},
+	author = {Liu, H. B and Ascencio, J. A and Perez-Alvarez, M and Yacaman, M. J},
+	month = sep,
+	year = {2001},
+	keywords = {Clusters, Computer simulations, Gold, Surface melting},
+	pages = {88--98},
+	file = {ScienceDirect Full Text PDF:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/APM3FJXR/Liu et al. - 2001 - Melting behavior of nanometer sized gold isomers.pdf:application/pdf;ScienceDirect Snapshot:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/DCVNQG3C/S0039602801013516.html:text/html}
+}
