--- a/md.tex
+++ b/md.tex
@@ -190,7 +190,7 @@ Zwar gibt es erfolgreiche \todo{kommerzielle} Anpassungen für Biomoleküle (\to
 Das Embedded Atom Model (EAM) für jedes Atom $i$ besteht aus einem Paarpotential $V_{\alpha\beta}(r_{ij})$ sowie einer Einbettungsfunktion $F_\alpha$, die die Energie jedes Atomes in Abhängigkeit der angenäherten Elektronendichte $\rho_\beta(r_{ij})$ in der Umgebung modelliert (Gleichung \ref{eq:eam-energy}).\todo{Referenz}
 So lassen sich insbesondere metallische Materialien und Oberflächen simulieren.
 $\alpha$ und $\beta$ stellen dabei verschiedene Atomsorten dar, allerdings lassen sich auch mit dieser umfangreicheren Formulierung hauptsächlich reine Metalle simulieren.
-Für diese findet man allerdings passende Parametrisierungen\todo{Referenz auf Datenbank und passende Paper}, die im Gegensatz zu den meisten Potentialen sowohl thermisches Verhalten als auch Strukturen recht gut modellieren \todo{Referenz auf separates Ergebniskapitel}.
+Für diese findet man allerdings passende Parametrisierungen\todo{Referenz auf Datenbank und passende Paper}, die im Gegensatz zu den meisten Potentialen sowohl thermodynamisches Verhalten als auch Strukturen recht gut modellieren \todo{Referenz auf separates Ergebniskapitel}.
 
 \begin{equation}
   \label{eq:eam-energy}
@@ -273,8 +273,8 @@ Da Molekulardynamik keine ab-initio-Methode ist, sondern jedes Potential erst an
 Je nach Potentialart lassen sich viele Parametrisierungen nicht vermischen oder auf andere Probleme übertragen.
 \\\\
 \textbf{Analysemethoden}:
-Im Normalfall sind Potentiale entweder für strukturelle oder thermische Größen optimiert.
-Mit einem rein strukturellen Potential lassen sich also keine thermischen Größen und Phasenübergänge verlässlich ermitteln.
+Im Normalfall sind Potentiale entweder für strukturelle oder thermodynamische Größen optimiert.
+Mit einem rein strukturellen Potential lassen sich also keine thermodynamischen Größen und Phasenübergänge verlässlich ermitteln.
 \\\\
 \textbf{Reaktionen}:
 Mit der Ausnahme des ReaxFF-Potentiales lassen sich per Molekulardynamik keine Reaktionen betrachten.
