--- a/results.tex
+++ b/results.tex
@@ -1,9 +1,11 @@
 \cleardoublepage
 \chapter{Ergebnisse}
 
-Im Verlauf der Erforschung möglicher Prozesse wurden Abscheidungen verschiedener Materialien und Methoden simuliert, die unterschiedliche Aspekte der Präparation, Durchführung und Einschränkungen von Parsivald-simulierten Prozessen demonstrieren.
+\todo[inline]{Neu schreiben: Was will ich eigentlich?}
 
-Abschnitt \ref{goldpvd} zeigt allgemeine Vorbetrachtungen eines Potentiales und seiner MD-Parameter sowie die Nutzung strukturierter Substrate anhand von Gold-PVD.
+Im Verlauf der Untersuchung möglicher Prozesse wurden Abscheidungen verschiedener Materialien und Methoden simuliert, die unterschiedliche Aspekte der Präparation, Durchführung und Einschränkungen von Parsivald-simulierten Prozessen demonstrieren.
+
+Abschnitt \ref{goldpvd} zeigt allgemeine Voruntersuchungen eines Potentiales und seiner MD-Parameter sowie die Nutzung strukturierter Substrate anhand von Gold-PVD.
 Im darauf folgenden Abschnitt \ref{copperpvd} werden verschiedene Potentiale auf die Anwendbarkeit auf Kupfer-PVD überprüft.
 Per PVD abgeschiedene Multilagensysteme stehen in Abschnitt \ref{multilayer} \todo{phrasing}zur Untersuchung.
 Silizium-PVD stellt abschließend Probleme mit amorphen Materialien in Abschnitt \ref{siliconpvd} dar.
