--- a/contents.tex
+++ b/contents.tex
@@ -78,7 +78,7 @@ TMA        &   Trimethylaluminum (\ce{Al(CH3)3})         &       Trimethylalumin
 
 NPT        &   \multicolumn{2}{X}{Großkanonisches Ensemble: Teilchenzahl, Druck und Temperatur sind konstant} \\
 NVT        &   \multicolumn{2}{X}{Kanonisches Ensemble: Teilchenzahl, Volumen und Temperatur sind konstant} \\
-NVT        &   \multicolumn{2}{X}{Mikrokanonisches Ensemble: Teilchenzahl, Volumen und Energie sind konstant} \\
+NVE        &   \multicolumn{2}{X}{Mikrokanonisches Ensemble: Teilchenzahl, Volumen und Energie sind konstant} \\
 Parsivald  &   \multicolumn{2}{X}{Parallel Atomistic Reaction Simulator for Vapor and Atomic Layer Depositions}  \\
 
 \end{tabularx}
