--- a/goldpvd.tex
+++ b/goldpvd.tex
@@ -31,25 +31,28 @@ Die Parametrisierung repräsentiert somit das Zielsystem.
 
 %% \todo[inline]{Oberflächenvalidierung}
 
-\subsection{Thermische Eigenschaften}
+\subsection{Thermodynamische Eigenschaften}
 
-Neben strukturellen Eigenschaften bilden EAM-Potentiale auch einige thermische Eigenschaften von Metallen ab.
+Neben strukturellen Eigenschaften bilden EAM-Potentiale auch einige thermodynamische Eigenschaften von Metallen ab.
 Für deren Untersuchung wurde die Massendichte in Abhängigkeit der Temperatur für die Teststruktur aufgenommen, die langsam auf \SI{2000}{\kelvin}, also weit über den Schmelzpunkt von \SI{1337}{\kelvin}, aufgeheizt wurde.
-Die Ergebnisse (Abbildung \ref{fig:goldthermo}) zeigen gute Übereinstimmung mit experimentellen Daten, allerdings sind die Relaxationszeiten $t_\text{relax}$ oberhalb von ca. \SI{20}{\pico\second} und Thermostat-Dämpfungsparameter $D_T$ um \SI{0.02}{\femto\second} notwendig.
+Die Ergebnisse (Abbildung \ref{fig:goldthermo}) zeigen gute Übereinstimmung mit experimentellen Daten, wofür Relaxationszeiten $t_\text{relax}$ oberhalb von \SI{20}{\pico\second} und Thermostat-Dämpfungsparameter $D_T$ \SI{\approx0.02}{\femto\second} als notwendig ermittelt wurden.
+Bei geringeren $t_\text{relax}$ oder $D_T$ relaxiert das System innerhalb eines Temperaturschrittes nicht vollständig, wodurch der Schmelzpunkt überschätzt wird, wie in Abbildung \ref{fig:goldthermo-b} zu sehen ist.
 
-\begin{figure}[tbp]
+\begin{figure}
   \captionsetup[subfigure]{singlelinecheck=false}
   \def\subfigwidth{7cm}
   \begin{subfigure}[t]{\subfigwidth}
     \includegraphics[width=\textwidth]{gold_bestthermo}
     \subcaption{Temperaturverlauf bei $ t_\text{relax}=\SI{50}{\pico\second}$ und $D_T=\SI{0.02}{\femto\second}$}
+    \label{fig:goldthermo-a}
   \end{subfigure}
   \hfill
   \begin{subfigure}[t]{\subfigwidth}
     \includegraphics[width=\textwidth]{gold_relaxtime}
     \subcaption{Abhängigkeit des simulierten Schmelzpunktes von der Relaxationszeit}
+    \label{fig:goldthermo-b}
   \end{subfigure}
-  \caption[Ergebnisse thermischer Simulationen von Gold]{Ergebnisse thermischer Simulationen von Gold.
+  \caption[Ergebnisse thermodynamischer Simulationen von Gold]{Ergebnisse thermodynamischer Simulationen von Gold.
     Verlauf stimmt gut mit experimentellen Daten (schwarze Linien) überein.
     Experimentelle Werte stammen aus Standardliteratur sowie von Brillo et al.\cite{brillo_density_2006}.
   }
