--- a/mdtests.tex
+++ b/mdtests.tex
@@ -1,9 +1,10 @@
 \section{Tests für MD-Potentiale zur Schichtabscheidung}
 
-Vor der Nutzung von molekulardynamischen Parametrisierungen sollten diese auf ihre Anwendbarkeit durch eine Reihe von Tests geprüft werden.
-Dabei ist zu erwähnen, dass die Parametrisierungen für einen speziellen Zweck erstellt werden und meist nur diesen ausreichend abdecken.
-Das bedeutet einerseits, dass man Potentiale, die auf thermische Probleme optimiert sind, nur selten zur Simulation struktureller Eigenschaften nutzen kann, und umgekehrt.
+Vor der Nutzung von Parametrisierungen von Wechselwirkungspotentialen für die Molekulardynamik sollten diese durch eine Reihe von Tests auf ihre Anwendbarkeit geprüft werden.
+Diese Parametrisierungen sind jeweils für einen speziellen Zweck erstellt worden und decken meist nur diesen zuverlässig ab\todo{und manchmal nicht mal das}.
+Das bedeutet einerseits, dass man Potentiale, die auf thermodynamische Probleme optimiert sind, nur selten zur Simulation struktureller Eigenschaften nutzen kann, und umgekehrt.
 Andererseits stehen hinter jeder Parametrisierung besondere Zielsetzungen, die oft vom eigenen Einsatzgebiet abweichen und eigentlich eine Anpassung der Parametrisierung, mindestens jedoch ihre Prüfung zur Voraussetzung haben.
+So unterstützen Potentiale zur Darstellung von Molekülen häufig keine Bulks und Oberflächen, und umgekehrt.
 
 Dem Thema der Arbeit entsprechend, sollen die zu untersuchenden Systeme strukturelle und chemische Eigenschaften in beschränkten Temperaturbereichen darstellen, was sich auch in den Tests zeigt.
 So wird die kristalline und amorphe Struktur, ihre Dichte, radiale Verteilungsfunktion, Bindungslängen und Koordination einerseits untersucht, und die Darstellbarkeit der zugrunde liegenden Reaktionen per ReaxFF-Formulierung sowie die Diffusion eines Atomes auf der Oberfläche andererseits.
