--- a/literature.bib
+++ b/literature.bib
@@ -148,6 +148,7 @@
 	title = {Entwicklung und Verifikation eines kombinierten Kinetic Monte Carlo / Molekulardynamik Modells zur Simulation von Schichtabscheidungen},
 	url = {http://nbn-resolving.de/urn:nbn:de:bsz:ch1-qucosa-106314},
 	urldate = {2014-07-24},
+	school = {{TU} Chemnitz},
 	author = {Lorenz, Erik E.},
 	month = sep,
 	year = {2012},
@@ -352,7 +353,6 @@
 	url = {http://link.springer.com/article/10.1007/s00339-010-5977-5},
 	doi = {10.1007/s00339-010-5977-5},
 	abstract = {Abstract The effects of annealing on gold structures sputtered onto glass substrate were studied using {AFM}, {UV}-Vis methods and electrical measurements. The colour of the as-deposited films changes from blue to green with increasing deposition time. After 1 hour annealing at 300°C the structures acquire red colour regardless of the film thickness. The annealing results in dramatic changes of surface morphology and roughness and creation of relatively large “spherolytic and hummock-like” structures in the gold layer. For deposited structures a non-zero optical band gap {EoptgE}\_\{{\textbackslash}mathrm\{g\}\}{\textasciicircum}\{{\textbackslash}mathrm\{opt\}\} was determined from {UV}-Vis spectra using Tauc’s model and it indicates a semi-conducting character of the structures. The annealing leads to an increase of the band gap. Electrical resistance of the deposited unannealed structures decreases dramatically for deposition times above 50 s. For annealed structures the resistance fall comes until after 250 s deposition time.},
-	language = {en},
 	number = {3},
 	urldate = {2014-10-21},
 	journal = {Applied Physics A},
